# CUDA-Parallel-Programming

./: README.md
01. Parallel Algorithm for Convert Color Image to Black&White Image/: CMakeLists.txt
03. Parallel Algorithm for Tone Mapping/: CMakeLists.txt
04. Parallel Algorithm for Remove Red Eye in Image/: CMakeLists.txt
05. Fast Parallel Algorithms for Implementing Histogram/: CMakeLists.txt
06. Parallel Algorithm for Seamless Image Cloning/: CMakeLists.txt
Code Snippets/03. Snippets/: deviceQuery_simplified.cpp
